Updated some small issues of links

--- a/_posts/2018-02-27-node-red.md
+++ b/_posts/2018-02-27-node-red.md
@@ -85,12 +85,12 @@ Finally, thanks to the HTTP input and output nodes. It is pretty easy to expose 
 
 {% include video id="m6gdU4i9BqQ" provider="youtube" %}
 
-Finally, as explained in the introduction, Node-red has been developed by IBM and has now been integrated with the IBM blockchain tool called Hyperledger. The following resource describes how to combine Node-red and Hyperledger: https://flows.nodered.org/node/node-red-contrib-hyperledger-composer.
+Finally, as explained in the introduction, Node-red has been developed by IBM and has now been integrated with the IBM blockchain tool called Hyperledger. The following resource describes how to combine Node-red and Hyperledger: [https://flows.nodered.org/node/node-red-contrib-hyperledger-composer](https://flows.nodered.org/node/node-red-contrib-hyperledger-composer).
 
-For simple experimentations, a basic blockchain implementation, which exposes a REST interface and can thus be easily integrated with Node-red, is available here:  https://github.com/lhartikk/naivechain
+For simple experimentations, a basic blockchain implementation, which exposes a REST interface and can thus be easily integrated with Node-red, is available here:  [https://github.com/lhartikk/naivechain](https://github.com/lhartikk/naivechain)
 
 
 Resources:
-* https://nodered.org
-* http://noderedguide.com/nr-lecture-1/
-* https://developer.ibm.com/tv/an-introduction-to-node-red/
+* [https://nodered.org](https://nodered.org)
+* [http://noderedguide.com/nr-lecture-1/](http://noderedguide.com/nr-lecture-1/)
+* [https://developer.ibm.com/tv/an-introduction-to-node-red/](https://developer.ibm.com/tv/an-introduction-to-node-red/)
