Added more content and images

--- a/_posts/2018-02-27-node-red.md
+++ b/_posts/2018-02-27-node-red.md
@@ -1,6 +1,7 @@
 ---
 layout: single
 title:  "Using Node-Red for Open Data"
+permalink: /news/using-nodered/
 date:   2018-02-27 16:18:00 +0100
 toc: true
 author_profile: false
